# ChangeLog for media-radio/grig
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Nov 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  grig-0.7.2.ebuild:
  Minor changes in DEPEND

  26 Jul 2007; David Shakaryan <omp@gentoo.org> +metadata.xml:
  Add metadata.

  26 Jul 2007; Nathan Smith (ndansmith) <ndansmith@gmail.org>
  +grig-0.7.2.ebuild:
  New package for bug 186176
