@@ -1,4 +1,4 @@
 DIST grig-0.7.2.tar.gz 494153 RMD160 2184e7e4fb343a5d8f391337273f4d864a088c9c SHA1 7b5f1e7f77a8b8907a77ba11a1e17c2eaff884f2 SHA256 b902f56a8bc287048fcbacbb331cab906b221f81696a1317973c505c870b1b51
-EBUILD grig-0.7.2.ebuild 623 RMD160 45f09323d9c971c4ae67ef7c84caf070d401827d SHA1 184a5c3bb343c92add99a4aa67a9b8918b9ac854 SHA256 c9e6317f75e768907b965b8425892d13d704a73ff2014de657375f4f6feb6a13
-MISC ChangeLog 421 RMD160 d6c23c65ca210b19dff623bfebd1088581f1b721 SHA1 f5105ffbc3383a9a69ad4bcddd2de23bb2bfebb6 SHA256 162e13bf7d38df24f84295169c0cb58ca072d36c055a281c9efefdf28193e119
+EBUILD grig-0.7.2.ebuild 824 RMD160 834a8e4133d5d25be04e1b73c41447ed67d6972e SHA1 6c518b178956af25cd4a485907839848bbc4c2c0 SHA256 0a67526d643107f8477353a56c3c0e37d5c1823e63a7cbe0b714c3c09277f978
+MISC ChangeLog 551 RMD160 9a29a4f51a31e5164aa19a2293e2790493cd4d3b SHA1 0f9850c5d7e0a98d3c13e0afbd4dc390e4f186e6 SHA256 3a901586657bdb49d328cc66557a6764b1212237974730fcd49354a92fe783bd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
