@@ -11,12 +11,19 @@ SRC_URI="mirror://sourceforge/groundstation/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~ppc"
-IUSE=""
+IUSE="coverage nohardware"
 
 DEPEND=">=dev-libs/glib-2.6
 	>=x11-libs/gtk+-2.6
 	>=media-libs/hamlib-1.2.5"
 RDEPEND="${DEPEND}"
+
+src_compile() {
+	local myconf
+	use nohardware && myconf="${myconf} --disable-hardware"
+	econf $(use_enable coverage ) $myconf || die "econf failed!"
+	emake || die "emake failed!"
+}
 
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed"
