@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
+  grig-0.7.2.ebuild:
+  Added 'coverage' and 'nohardware' USE flags
+
   06 Nov 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
   grig-0.7.2.ebuild:
   Minor changes in DEPEND
